--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- video background -->
+    <video class="video-background" loop muted autoplay>
+        <source src="Mountain.mp4"></source>
+    </video>
+    <!-- video overlay -->
+    <div class="video-overlay"></div>
+    <!-- container -->
+    <div class="container">
+        <!-- input -->
+        <div class="input-container" id="input-container" >
+            <h1>Create custom countdown!</h1>
+            <form class="form" id="countdownForm">
+                <label for="title">Title</label>
+                <input type="text" id="title" placeholder="What are you counting down to?">
+                <label for="date-picker">Select a date</label>
+                <input type="date" id="date-picker">
+                <button type="submit">Submit</button>
+            </form> 
+        </div>
+        <!-- countdown -->
+        <div class="countdown" id="countdown" hidden>
+            <h1 id="countdown-title"></h1>
+            <ul>
+                <li><span></span>Days</li>
+                <li><span></span>Hours</li>
+                <li><span></span>Minutes</li>
+                <li><span></span>Seconds</li>
+            </ul>
+            <button id="countdown-button">Reset</button>
+        </div>
+        <!-- completed -->
+        <div class="complete" id="complete" hidden>
+            <h1 class="complete-title">Countdown complete!</h1>
+            <h1 id="complete-info"></h1>
+            <button id="complete-button">New Countdown</button>
+        </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
